Bug 875483 - YouTube HTML5 Playback hangs Firefox. r=tterribe